[package]
name = "gbwt"
version = "0.2.2"
authors = ["Jouni Siren <jouni.siren@iki.fi>"]
edition = "2018"
description = "Partial reimplementation of the GBWT."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/gbwt-rs"

[features]
binaries = ["getopts", "libc", "rand", "rayon"]

[dependencies]
simple-sds = { git = "https://github.com/jltsiren/simple-sds", branch = "main" }
getopts = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }
rayon = { version = "1.5", optional = true }

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "gbunzip"
required-features = ["binaries"]
test = false
bench = false
doc = false
