[package]
name = "gbwt"
version = "0.4.0"
edition = "2024"
description = "Partial reimplementation of the GBWT"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/gbwt-rs"

[features]
binaries = ["getopts", "libc", "rand", "rayon"]

[dependencies]
simple-sds = { version = "0.4.0" }
zstd = { version = "0.13" }
getopts = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
rand = { version = "0.9", optional = true }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "gbunzip"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "gbz-extract"
required-features = ["binaries"]
test = false
bench = false
doc = false
